# ATLAS-tuwienasl

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
config/: berkeley_cable_routing.yaml  frames.yaml  reassemble.yaml  rlds.yaml  rosbag.yaml  video.yaml
docs/: atlas_gui.datasets.rst  atlas_gui.rst  atlas_gui.utils.rst  conf.py  configuration.rst  index.rst  modules.rst
src/atlas_gui/: gui.py
src/atlas_gui/datasets/: dataset.py  frames.py  reassemble.py  rlds.py  rosbag_ds.py  video.py
src/atlas_gui/utils/: config.py  keys.py  reassemble_helpers.py
